--- a/Açougue Dimas/inicializacao.html
+++ b/Açougue Dimas/inicializacao.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,900&display=swap" rel="stylesheet">
     <title>Açougue</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
             <label class="input-label" for="senha">Senha</label>
         </div>
         <!--div para a inserção da senha-->
-        <div class="exibe-senha"></div>
+        <div class="inicia-aplicacao"></div>
     </main>
     <footer>
         <div>
