ultimo update do dia

--- a/Açougue Dimas/inicializacao.html
+++ b/Açougue Dimas/inicializacao.html
@@ -29,7 +29,9 @@
             </div>
         </div>
         <!--div para a inserção da senha-->
-        <div class="inicia-aplicacao"></div>
+        <div class="inicia-aplicacao">
+
+        </div>
     </main>
     <footer>
         <div>
