quebramo e cabeça e o código

--- a/Açougue Dimas/inicializacao.html
+++ b/Açougue Dimas/inicializacao.html
@@ -29,9 +29,7 @@
             </div>
         </div>
         <!--div para a inserção da senha-->
-        <div class="inicia-aplicacao">
-
-        </div>
+        <div class="inicia-aplicacao"></div>
     </main>
     <footer>
         <div>
