--- a/Açougue Dimas/inicializacao.html
+++ b/Açougue Dimas/inicializacao.html
@@ -20,11 +20,12 @@
                     <li class="instrucao">1- Aperte F11</li>
                     <li class="instrucao">2- Digite a senha do dia</li>
                     <li class="instrucao">3- Aperte enter para começar</li>
-                    <li class="instrucao">4- A cada cliente atendido, pressione enter novamente</li>
+                    <li class="instrucao">4- A cada cliente atendido, pressione espaço novamente</li>
+                    <li class="instrucao">5- Caso houver algum problema, aperte F5 para reiniciar a aplicação</li>
                 </ol>
             </article>
             <div class="input-container">
-                <input type="number" id="senha" class="input" placeholder="Insira aqui a senha" required>
+                <input type="number" id="senha" class="input" placeholder autofocus="Insira aqui a senha" required>
                 <label class="input-label" for="senha">Senha</label>
             </div>
         </div>
