--- a/Açougue Dimas/inicializacao.html
+++ b/Açougue Dimas/inicializacao.html
@@ -17,11 +17,11 @@
         <div class="container-inicializacao">
             <article>
                 <ol id="lista">
-                    <li class="instrucao">1- Aperte F11</li>
+                    <li class="instrucao">1- Aperte <strong>F11</strong></li>
                     <li class="instrucao">2- Digite a senha do dia</li>
-                    <li class="instrucao">3- Aperte enter para começar</li>
-                    <li class="instrucao">4- A cada cliente atendido, pressione espaço novamente</li>
-                    <li class="instrucao">5- Caso houver algum problema, aperte F5 para reiniciar a aplicação</li>
+                    <li class="instrucao">3- Aperte <strong>ENTER</strong> para começar</li>
+                    <li class="instrucao">4- A cada cliente atendido, pressione <strong>ESPAÇO</strong> novamente</li>
+                    <li class="instrucao">5- Caso haja algum problema, aperte <strong>F5</strong> para reiniciar a aplicação</li>
                 </ol>
             </article>
             <div class="input-container">
