Att 1.1 - melhorias na experiência do usuário

--- a/Açougue Dimas/inicializacao.html
+++ b/Açougue Dimas/inicializacao.html
@@ -20,7 +20,7 @@
                     <li class="instrucao">1- Aperte <strong>F11</strong></li>
                     <li class="instrucao">2- Digite a senha do dia</li>
                     <li class="instrucao">3- Aperte <strong>ENTER</strong> para começar</li>
-                    <li class="instrucao">4- A cada cliente atendido, pressione <strong>ESPAÇO</strong> novamente</li>
+                    <li class="instrucao">4- A cada cliente atendido, pressione <strong>ENTER</strong> novamente</li>
                     <li class="instrucao">5- Caso haja algum problema, aperte <strong>F5</strong> para reiniciar a aplicação</li>
                 </ol>
             </article>
