--- a/Açougue Dimas/inicializacao.html
+++ b/Açougue Dimas/inicializacao.html
@@ -31,7 +31,16 @@
         </div>
         <div class="inativo sinalizador" id="container-executando-app">
             <div class="container-imagens">
-                <img src="assets/imgs/01.png" onload="slide1();" class="imagem">
+                <img src="assets/imgs/01.png" onload="iniciaRotacao();" class="ativa imagem">
+                <img src="assets/imgs/02.png" class="imagem">
+                <img src="assets/imgs/03.png" class="imagem">
+                <img src="assets/imgs/04.png" class="imagem">
+                <img src="assets/imgs/05.png" class="imagem">
+                <img src="assets/imgs/06.png" class="imagem">
+                <img src="assets/imgs/07.png" class="imagem">
+                <img src="assets/imgs/08.png" class="imagem">
+                <img src="assets/imgs/09.png" class="imagem">
+                <img src="assets/imgs/10.png" class="imagem">
             </div>
             <div class="container-senha">
                 <h1 class="senha__titulo">SENHA</h1>
@@ -40,7 +49,7 @@
         </div>
 
     </main>
-    <footer>
+    <footer class="footer">
         <div>
             <h1 class="instrucaoInscrever__titulo">RECEBA OFERTAS EM SEU TELEFONE!</h1>
             <ol class="instrucaoInscrever__lista">
