--- a/Açougue Dimas/inicializacao.html
+++ b/Açougue Dimas/inicializacao.html
@@ -17,21 +17,39 @@
         <div class="container-inicializacao">
             <article>
                 <ol id="lista">
-                    <li class="instrucao">1- Aperte F11</li>
-                    <li class="instrucao">2- Digite a senha do dia</li>
-                    <li class="instrucao">3- Aperte enter para começar</li>
-                    <li class="instrucao">4- A cada cliente atendido, pressione enter novamente</li>
+                    <li class="lista__instrucao">1- Aperte <strong>F11</strong></li>
+                    <li class="lista__instrucao">2- Digite a senha do dia</li>
+                    <li class="lista__instrucao">3- Aperte <strong>ENTER</strong> para começar</li>
+                    <li class="lista__instrucao">4- A cada cliente atendido, pressione <strong>ENTER</strong> novamente</li>
+                    <li class="lista__instrucao">5- Caso haja algum problema, aperte <strong>F5</strong> para reiniciar a aplicação</li>
                 </ol>
             </article>
             <div class="input-container">
-                <input type="number" id="senha" class="input" placeholder="Insira aqui a senha" required>
+                <input type="number" id="senha" class="input" placeholder autofocus="Insira aqui a senha" required>
                 <label class="input-label" for="senha">Senha</label>
             </div>
         </div>
-        <!--div para a inserção da senha-->
-        <div class="inicia-aplicacao"></div>
+        <div class="inativo sinalizador" id="container-executando-app">
+            <div class="container-imagens">
+                <img src="assets/imgs/01.png" onload="iniciaRotacao();" class="ativa imagem">
+                <img src="assets/imgs/02.png" class="imagem">
+                <img src="assets/imgs/03.png" class="imagem">
+                <img src="assets/imgs/04.png" class="imagem">
+                <img src="assets/imgs/05.png" class="imagem">
+                <img src="assets/imgs/06.png" class="imagem">
+                <img src="assets/imgs/07.png" class="imagem">
+                <img src="assets/imgs/08.png" class="imagem">
+                <img src="assets/imgs/09.png" class="imagem">
+                <img src="assets/imgs/10.png" class="imagem">
+            </div>
+            <div class="container-senha">
+                <h1 class="senha__titulo">SENHA</h1>
+                <p class="senha__paragrafo"></p>
+            </div>
+        </div>
+
     </main>
-    <footer>
+    <footer class="footer">
         <div>
             <h1 class="instrucaoInscrever__titulo">RECEBA OFERTAS EM SEU TELEFONE!</h1>
             <ol class="instrucaoInscrever__lista">
